05/17/2005 Bob Rossi <bob@brasko.net>
	
	* interface.c (init_curses): Remove call to noecho and timeout.
	(if_shutdown): Remove call to echo();

05/17/2005 Bob Rossi <bob@brasko.net>

	* cgdb.c (include): Add include terminal.h.
	(cleanup): Add call to reset the terminal to original settings.
	(main): Add call to setup the terminal to the cbreak mode.
	* interface.c (init_curses): Remove call to cbreak and keypad.
	(if_shutdown): Remove call to keypad. Remove comment.

version 0.5.1 (04/02/2005):

04/02/2005 Bob Rossi <bob@brasko.net>

	* sources.c (get_relative_node): Guard against strcmp with NULL pointer.
	(get_node): Ditto.
	(source_add): Init lpath field.

04/02/2005 Bob Rossi <bob@brasko.net>

    * helptext.h: Updated the README file.
	* sources.h (struct sviewer): Remove queue, queue_index and
	queue_top_index fields.
	(source_next): Remove.
	(source_previous): Ditto.
	* sources.c (source_queue_init): Remove.
	(source_queue_remove): Ditto.
	(source_queue_push): Ditto.
	(source_queue_previous): Ditto.
	(source_queue_next): Ditto.
	(source_new): Remove processing for queue data.
	(source_del): Ditto.
	(source_set_exec_line): Ditto.
	(source_free): Ditto.

	* interface.c (source_input): Remove b and f commands.

04/01/2005 Bob Rossi <bob@brasko.net>
   
   * Makefile.in: Regenerated with documented autotools version.

03/31/2005 Bob Rossi <bob@brasko.net>

	* interface.c (capture_regex): Save current source viewer line.
	* sources.c (source_search_regex): Clear current line.

03/31/2005 Bob Rossi <bob@brasko.net>

	* highlight.c (hl_regex): Fix memory runtime errors.
	* sources.c (source_del): Fix memory runtime errors.

03/31/2005 Bob Rossi <bob@brasko.net>

	* interface.c (set_up_signal): Catch the SIGCHLD signal now.
	(signal_handler): Alert TGDB of SIGCHLD now.

03/31/2005 Bob Rossi <bob@brasko.net>

	* cgdb.c (parse_long_options): Stop looking at args when one is not
	recognized.

03/31/2005 Bob Rossi <bob@brasko.net>
